# challenges

./: .gitignore  README.md
.github/workflows/: advent-of-code-2022.yml  advent-of-code-2023.yml  foobar.yml
advent-of-code/2022/cpp/: CMakeLists.txt  Dockerfile  build-and-run.sh
advent-of-code/2022/cpp/data/02/: output.txt
advent-of-code/2022/cpp/data/04/: output.txt
advent-of-code/2022/cpp/data/05/: output.txt
advent-of-code/2022/cpp/data/06/: output.txt
advent-of-code/2022/cpp/data/09/: output.txt
advent-of-code/2022/cpp/data/12/: output.txt
advent-of-code/2022/cpp/data/13/: output.txt
advent-of-code/2022/cpp/data/14/: output.txt
advent-of-code/2022/cpp/data/15/: output.txt
advent-of-code/2022/cpp/data/16/: output.txt
advent-of-code/2022/cpp/data/17/: output.txt
advent-of-code/2022/cpp/data/18/: output.txt
advent-of-code/2022/cpp/data/19/: test-input1.txt
advent-of-code/2022/cpp/data/20/: output.txt
advent-of-code/2022/cpp/data/22/: output.txt
advent-of-code/2022/cpp/data/24/: sample-step1.txt
advent-of-code/2022/cpp/data/25/: output.txt
advent-of-code/2022/cpp/src/: 01.cpp  01.hpp  02.cpp  02.hpp  03.cpp  03.hpp  04.cpp  04.hpp  05.cpp  05.hpp  06.cpp  06.hpp  07.cpp  07.hpp  08.cpp  08.hpp  09.cpp  09.hpp  10.cpp  10.hpp  11.cpp  11.hpp  12.cpp  12.hpp  13.cpp  13.hpp  14.cpp  14.hpp  15.cpp  15.hpp  16.cpp  16.hpp  17.cpp  17.hpp  18.cpp  18.hpp  19.cpp  19.hpp  20.cpp  20.hpp  (+14 more)
advent-of-code/2023/python/: requirements.txt
advent-of-code/2024/python/: requirements.txt  run.sh
advent-of-code/2025/: requirements.txt  run.sh
advent-of-code/2025/advent_of_code/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
advent-of-code/2025/assignment/: day-06.txt
advent-of-code/2025/test/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py  test_12.py  utility.py
foobar/: README.md  decrypt.py
project-euler/: 01-multiples-of-3-or-5.cpp  02-even-fibonacci-numbers.cpp  03-largest-prime-factor.cpp  SimpleLib.hpp
(+152 files in other folders)
